<resources>
    <string name="app_name">Google Books API</string>
    <string name="connected">Połączono z siecią</string>
    <string name="disconnected">Brak połączenia z siecią</string>
    <string name="search">Szukaj</string>
    <string name="book_details_ratings_count">opinii</string>
    <string name="book_details_page_count">stron</string>
    <string name="book_details_add_to_favourites">Dodaj do ulubionych</string>
    <string name="book_details_description">Opis</string>
    <string name="search_engine">Wyszukiwarka</string>
    <string name="loading">Ładowanie</string>
    <string name="no_results">Brak wyników</string>
    <string name="book_error">Coś poszło nie tak</string>
    <string name="last_visited_books">Ostatnio przeglądane książki</string>
    <string name="delete_all">Usunięto wszystkie rekordy</string>
    <string name="confirm">Potwierdzenie</string>
    <string name="clear_history_confirm">Jesteś pewien, że chcesz wyczyścić historię?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="filter_partial">Częściowe</string>
    <string name="filter_full">Pełne</string>
    <string name="filter_free_ebooks">Darmowe e-booki</string>
    <string name="filter_paid_ebooks">Płatne e-booki</string>
    <string name="filter_ebooks">E-booki</string>
    <string name="order_by_relevance">Od najtrafniejszych</string>
    <string name="order_by_newest">Od najnowszych</string>
    <string name="print_type_all">Wszystkie</string>
    <string name="print_type_books">Książki</string>
    <string name="print_type_magazines">Czasopisma</string>
    <string name="filtering">Filtrowanie</string>
    <string name="order_by">Kolejność</string>
    <string name="print_type">Rodzaj</string>
    <string name="advanced_settings">Opcje zaawansowane</string>
    <string name="search_field_is_empty_title">Podano błędny tytuł książki</string>
    <string name="search_field_is_empty_description">Pole wyszukiwarki nie może być puste</string>
    <string name="book_details_saleability_free">Darmowy</string>
    <string name="book_details_saleability_not_for_sale">Nie na sprzedaż</string>
    <string name="book_details_ebook">E-book</string>
    <string name="search_field_label">Tytuł książki</string>
</resources>