<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.book.BookDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/book_details_image"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@drawable/default_book" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/book_details_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="The Lord of the Rings: The Fellowship of the Ring"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/book_details_authors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="J.R.R. Tolkien"
                        android:textColor="#6699ff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_details_publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="‎New Line Cinema"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/book_details_average_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.1"
                        android:textSize="20sp" />

                    <ImageView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_star_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_details_ratings_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="50"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/book_details_ratings_count"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_details_page_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="5441"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/book_details_page_count"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_details_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="154"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/book_details_price_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="PLN"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/book_details_description"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/book_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eleifend egestas efficitur. In congue ex vel nulla dapibus ornare. Suspendisse aliquam sagittis nibh eu suscipit. Praesent rhoncus nulla accumsan dolor egestas, ut faucibus arcu mollis. Ut consectetur interdum faucibus. Nulla facilisi. In imperdiet tempor risus, nec fermentum odio tristique vitae. In bibendum elit purus, lacinia elementum nulla consectetur ac. Ut ultrices est purus, et fringilla lectus mattis semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas." />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>